clusters/hybrid01/config/homer/homer-mtls.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "mtls-config"
  namespace: homer
spec:
  mtls:
    mode: PERMISSIVE
