clusters/hybrid01/config/homer/homer-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homer
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
