clusters/hybrid01/config/homer/homer-monitoring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidecar-monitoring-service
  namespace: homer
spec:
  selector:
    app: homer
  ports:
    - protocol: TCP
      port: 15090
      targetPort: 15090
